tests/fails/f4.t
struct A { a : int, a : int }
terra foo()
    var a : A
end
foo()
